wedding section impl

--- a/weddingrings.html
+++ b/weddingrings.html
@@ -6,12 +6,10 @@
     <title>Divine</title>
   </head>
   <body>
-    <div id="app">
-      <app></app>
+    <div id="weddingApp">
+      <wedapp></wedapp>
     </div>
-    <script id="mainScript" type="module" src="/src/main.js" page="mainapp"></script>
-    <script>
-    </script>
+    <script id="mainScript" type="module" src="/src/main.js" page="weddingrings"></script>
     <script type="module" src="/src/components/TweenMax.js"></script>
   </body>
 </html>
