--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" media="screen and (max-width: 500px)" href="/src/mstyle.css"/>
+    <link rel="stylesheet" media="screen and (min-width: 501px)" href="/src/style.css"/>
     <title>Divine</title>
   </head>
   <body>
