--- a/weddingrings.html
+++ b/weddingrings.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Divine</title>
     <link href='https://fonts.googleapis.com/css?family=Playball' rel='stylesheet'>
+    <link rel="stylesheet" media="screen and (max-width: 500px)" href="/src/mstyle.css"/>
+    <link rel="stylesheet" media="screen and (min-width: 501px)" href="/src/style.css"/>
   </head>
   <body>
     <div id="weddingApp">
