--- a/customizer.html
+++ b/customizer.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href='https://fonts.googleapis.com/css?family=Playball:wght@500&display=swap"' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Playball' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
     <link rel="stylesheet" media="screen and (max-width: 500px)" href="/src/mstyle.css"/>
     <link rel="stylesheet" media="screen and (min-width: 501px)" href="/src/style.css"/>
